@@ -1,3 +1,5 @@
+2006/8/8 -- released version 20060808_trunk
+
 2006/8/7 -- released version 20060807_trunk
 
 2006/8/6 -- released version 20060806_trunk
